admin/src/scss/theme/_input.scss
@use '../abstracts' as *;
@use './buttons' as *;
@use './colors' as *;
@use './borders' as *;

$input-font-size: rem(14);
$input-font-weight: $fw-medium;
$input-font-size-sm: rem(12);
$input-font-size-lg: $input-font-size;
$input-disabled-bg: transparent;
$input-bg: $white;

// orders search input
$input-padding-y-lg: rem(19);
$input-padding-x-lg: rem(20);

// input
$input-padding-y: rem(12);
$input-padding-x: rem(16);

// events search input
$input-padding-x-sm: rem(16);
$input-padding-y-sm: rem(10);

$input-border-width: 2px;
$input-focus-box-shadow: none;
$input-focus-border-color: $primary;
$input-placeholder-color: $clr-neutral-5;

$form-select-focus-box-shadow: none;
$form-select-bg-position: right 1em center;
$form-select-disabled-bg: $gray-300;

$form-switch-color: $clr-neutral-4;
$form-switch-focus-color: $form-switch-color;
$form-switch-width: em(50);

$form-check-label-cursor: pointer;
$form-check-input-width: em(24);
$form-check-margin-bottom: rem(12);
$form-check-input-focus-box-shadow: none;
$form-check-margin-bottom: rem(16);

